# snesclassicstuff

./: CMakeLists.txt  main.c  note.txt
desktopclient/: Thumbs.db  desktopclient.pro  images.qrc  inputdecoder.cpp  inputdecoder.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapping_hirom.c  mapping_lorom.c  miniftp.cpp  miniftp.h  rommapping.c  rommapping.h  sfcbutton.xcf  telnetconnection.cpp  telnetconnection.h
memstuff/: CMakeLists.txt  main.c  makemod.sh
memstuff/mod/: install  memstuff.hmod  readme.txt
qtftp/: .gitattributes  .gitignore  LICENSE.PREVIEW.COMMERCIAL  qtftp.pro  readme.txt  sync.profile
qtftp/examples/: examples.pro
qtftp/examples/qftp/: ftpwindow.cpp  ftpwindow.h  main.cpp  qftp.desktop  qftp.pro
qtftp/modules/: qt_ftp.pri
qtftp/src/qftp/: qftp.cpp  qftp.h  qftp.pro  qurlinfo.h
qtftp/tests/auto/: auto.pro  network-settings.h
qtftp/tests/auto/cmake/: CMakeLists.txt  cmake.pro
qtftp/tests/auto/headersclean/: headersclean.pro  qt_headersclean_headers.h
qtftp/tests/auto/qftp/: .gitattributes  .gitignore  qftp.pro  tst_qftp.cpp
serverstuff/: CMakeLists.txt  client.c  cmd.c  mainserver.c  server.c  server.h  testsocket.c
serverstuff/hmod/: README.md  install  makemod.sh  serverstuff.hmod
serverstuff/hmod/etc/init.d/: S100serverstuff
stuffclient/: stuffclient.cpp  stuffclient.h
